[metadata]
name = orchid_api
version = attr: orchid_api.__version__
url = https://github.com/d-davidson/OrchidAPI
license = MIT
author = Andrew Davidson
author_email = thunderbunson@gmail.com
description = Library for interacting with the Orchid Core VMS API

[options]
packages = orchid_api
include_package_data = True
python_requires = >= 3.6
